[gd_scene load_steps=5 format=3 uid="uid://1vkk82vb1fhx"]

[ext_resource type="Theme" uid="uid://cxdkmx1yqhiuv" path="res://assets/themes/toy_mag.tres" id="1_34oot"]
[ext_resource type="Script" uid="uid://c17v8isknm8re" path="res://scripts/toy_mag_page.gd" id="2_58728"]
[ext_resource type="Texture2D" uid="uid://b4s7wimgi6xdx" path="res://assets/toy_icons/action_figure_a.png" id="3_34oot"]
[ext_resource type="Texture2D" uid="uid://c3833h47doc2" path="res://assets/toy_icons/action_figure_b.png" id="4_58728"]

[node name="leftPage4" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_34oot")
theme_override_constants/separation = 0
script = ExtResource("2_58728")
page = 4

[node name="topSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_type_variation = &"topSep"

[node name="toyHBox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="toyAArea" type="MarginContainer" parent="toyHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="toyVbox" type="VBoxContainer" parent="toyHBox/toyAArea"]
layout_mode = 2

[node name="toyAreaBG" type="Panel" parent="toyHBox/toyAArea/toyVbox"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"toyBG"

[node name="toyIcon" type="TextureRect" parent="toyHBox/toyAArea/toyVbox/toyAreaBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_34oot")
expand_mode = 1
stretch_mode = 5

[node name="toyName" type="Label" parent="toyHBox/toyAArea/toyVbox"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"nameLabel"
text = "SCHLADEEM ALPHA"
autowrap_mode = 3

[node name="toyDesc" type="Label" parent="toyHBox/toyAArea/toyVbox"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"listingLabel"
text = "Another member of the SCHLADEEM crew.

[COLLECT THEM ALL?]
"
autowrap_mode = 3

[node name="priceLabel" type="Label" parent="toyHBox/toyAArea"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = &"priceLabel"
text = "$48"

[node name="toySep" type="VSeparator" parent="toyHBox"]
layout_mode = 2
theme_type_variation = &"listingSep"

[node name="toyBArea" type="MarginContainer" parent="toyHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="toyVbox" type="VBoxContainer" parent="toyHBox/toyBArea"]
layout_mode = 2

[node name="toyName" type="Label" parent="toyHBox/toyBArea/toyVbox"]
layout_mode = 2
size_flags_vertical = 10
theme_type_variation = &"nameLabel"
text = "SCHLADEEM BETA"
horizontal_alignment = 2
autowrap_mode = 3

[node name="toyDesc" type="Label" parent="toyHBox/toyBArea/toyVbox"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"listingLabel"
text = "Another member of the SCHLADEEM  crew.

[COLLECT THEM ALL?]
"
horizontal_alignment = 2
autowrap_mode = 3

[node name="toyAreaBG" type="Panel" parent="toyHBox/toyBArea/toyVbox"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"toyBG"

[node name="toyIcon" type="TextureRect" parent="toyHBox/toyBArea/toyVbox/toyAreaBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_58728")
expand_mode = 1
stretch_mode = 5

[node name="priceLabel" type="Label" parent="toyHBox/toyBArea"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"priceLabel"
text = "$48"

[node name="topSeparator2" type="HSeparator" parent="."]
layout_mode = 2
theme_type_variation = &"topSep"
